src/components/Forms/ValidationError/style.module.less
.error {
    background: var(--secondary-color);
    color: var(--bg-color);
    padding: .2em;
    animation-duration: 0.5s;
    animation-iteration-count: 3;
    animation-name: blink;
    display: inline-block;
}

@keyframes blink {
    0% {
        opacity: 1;
    }
    49% {
        opacity: 1;
    }
    50% {
        opacity: 0;
    }
    100% {
        opacity: 0;
    }
}

